qt/gen_qvariant.nim

proc fcQSequentialIterableconst_iterator_operatorPlusAssign(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlusAssign".}
proc fcQSequentialIterableconst_iterator_operatorMinusAssign(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinusAssign".}
proc fcQSequentialIterableconst_iterator_operatorPlus(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlus".}
proc fcQSequentialIterableconst_iterator_operatorMinus(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinus".}
proc fcQSequentialIterableconst_iterator_delete(self: pointer) {.importc: "QSequentialIterable__const_iterator_delete".}
proc fcQAssociativeIterableconst_iterator_new(other: pointer): ptr cQAssociativeIterableconst_iterator {.importc: "QAssociativeIterable__const_iterator_new".}
proc fcQAssociativeIterableconst_iterator_operatorAssign(self: pointer, other: pointer): void {.importc: "QAssociativeIterable__const_iterator_operatorAssign".}
proc fcQAssociativeIterableconst_iterator_key(self: pointer, ): pointer {.importc: "QAssociativeIterable__const_iterator_key".}
proc fcQAssociativeIterableconst_iterator_value(self: pointer, ): pointer {.importc: "QAssociativeIterable__const_iterator_value".}
proc fcQAssociativeIterableconst_iterator_operatorMultiply(self: pointer, ): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMultiply".}
proc fcQAssociativeIterableconst_iterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QAssociativeIterable__const_iterator_operatorEqual".}
proc fcQAssociativeIterableconst_iterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QAssociativeIterable__const_iterator_operatorNotEqual".}
proc fcQAssociativeIterableconst_iterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusPlus".}
proc fcQAssociativeIterableconst_iterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusPlusWithInt".}
proc fcQAssociativeIterableconst_iterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusMinus".}
proc fcQAssociativeIterableconst_iterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusMinusWithInt".}
proc fcQAssociativeIterableconst_iterator_operatorPlusAssign(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusAssign".}
proc fcQAssociativeIterableconst_iterator_operatorMinusAssign(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusAssign".}
proc fcQAssociativeIterableconst_iterator_operatorPlus(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlus".}
proc fcQAssociativeIterableconst_iterator_operatorMinus(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinus".}
proc fcQAssociativeIterableconst_iterator_delete(self: pointer) {.importc: "QAssociativeIterable__const_iterator_delete".}


func init*(T: type QVariant, h: ptr cQVariant): QVariant =
  T(h: h)
proc create*(T: type QVariant, ): QVariant =

  QVariant.init(fcQVariant_new())
proc create*(T: type QVariant, typeVal: QVariantType): QVariant =

  QVariant.init(fcQVariant_new2(cint(typeVal)))
proc create*(T: type QVariant, typeId: cint, copy: pointer): QVariant =

  QVariant.init(fcQVariant_new3(typeId, copy))
proc create*(T: type QVariant, typeId: cint, copy: pointer, flags: cuint): QVariant =

  QVariant.init(fcQVariant_new4(typeId, copy, flags))
proc create*(T: type QVariant, other: QVariant): QVariant =

  QVariant.init(fcQVariant_new5(other.h))
proc create2*(T: type QVariant, s: gen_qdatastream.QDataStream): QVariant =

  QVariant.init(fcQVariant_new6(s.h))
proc create2*(T: type QVariant, i: cint): QVariant =

  QVariant.init(fcQVariant_new7(i))
proc create*(T: type QVariant, ui: cuint): QVariant =

  QVariant.init(fcQVariant_new8(ui))
proc create*(T: type QVariant, ll: clonglong): QVariant =

  QVariant.init(fcQVariant_new9(ll))
proc create*(T: type QVariant, ull: culonglong): QVariant =

  QVariant.init(fcQVariant_new10(ull))
proc create*(T: type QVariant, b: bool): QVariant =

  QVariant.init(fcQVariant_new11(b))
proc create*(T: type QVariant, d: float64): QVariant =

  QVariant.init(fcQVariant_new12(d))
proc create*(T: type QVariant, f: float32): QVariant =

  QVariant.init(fcQVariant_new13(f))
proc create*(T: type QVariant, str: cstring): QVariant =

  QVariant.init(fcQVariant_new14(str))
proc create*(T: type QVariant, bytearray: seq[byte]): QVariant =

  QVariant.init(fcQVariant_new15(struct_miqt_string(data: cast[cstring](if len(bytearray) == 0: nil else: unsafeAddr bytearray[0]), len: csize_t(len(bytearray)))))
proc create2*(T: type QVariant, bitarray: gen_qbitarray.QBitArray): QVariant =

  QVariant.init(fcQVariant_new16(bitarray.h))
proc create2*(T: type QVariant, string: string): QVariant =

  QVariant.init(fcQVariant_new17(struct_miqt_string(data: string, len: csize_t(len(string)))))
proc create*(T: type QVariant, stringlist: seq[string]): QVariant =

  var stringlist_CArray = newSeq[struct_miqt_string](len(stringlist))
  for i in 0..<len(stringlist):
    stringlist_CArray[i] = struct_miqt_string(data: stringlist[i], len: csize_t(len(stringlist[i])))

  QVariant.init(fcQVariant_new18(struct_miqt_array(len: csize_t(len(stringlist)), data: if len(stringlist) == 0: nil else: addr(stringlist_CArray[0]))))
proc create2*(T: type QVariant, qchar: gen_qchar.QChar): QVariant =

  QVariant.init(fcQVariant_new19(qchar.h))
proc create2*(T: type QVariant, date: gen_qdatetime.QDate): QVariant =

  QVariant.init(fcQVariant_new20(date.h))
proc create2*(T: type QVariant, time: gen_qdatetime.QTime): QVariant =

  QVariant.init(fcQVariant_new21(time.h))
proc create2*(T: type QVariant, datetime: gen_qdatetime.QDateTime): QVariant =

  QVariant.init(fcQVariant_new22(datetime.h))
proc create*(T: type QVariant, map: Table[string,QVariant]): QVariant =

  var map_Keys_CArray = newSeq[struct_miqt_string](len(map))
  var map_Values_CArray = newSeq[pointer](len(map))
  var map_ctr = 0
  for mapk, mapv in map:
    map_Keys_CArray[map_ctr] = struct_miqt_string(data: map_k, len: csize_t(len(map_k)))
    map_Values_CArray[map_ctr] = map_v.h
    map_ctr += 1

  QVariant.init(fcQVariant_new23(struct_miqt_map(len: csize_t(len(map)),keys: if len(map) == 0: nil else: addr(map_Keys_CArray[0]), values: if len(map) == 0: nil else: addr(map_Values_CArray[0]),)))
proc create2*(T: type QVariant, hash: Table[string,QVariant]): QVariant =

  var hash_Keys_CArray = newSeq[struct_miqt_string](len(hash))
  var hash_Values_CArray = newSeq[pointer](len(hash))
  var hash_ctr = 0
  for hashk, hashv in hash:
    hash_Keys_CArray[hash_ctr] = struct_miqt_string(data: hash_k, len: csize_t(len(hash_k)))
    hash_Values_CArray[hash_ctr] = hash_v.h
    hash_ctr += 1

  QVariant.init(fcQVariant_new24(struct_miqt_map(len: csize_t(len(hash)),keys: if len(hash) == 0: nil else: addr(hash_Keys_CArray[0]), values: if len(hash) == 0: nil else: addr(hash_Values_CArray[0]),)))
proc create2*(T: type QVariant, size: gen_qsize.QSize): QVariant =

  QVariant.init(fcQVariant_new25(size.h))
proc create2*(T: type QVariant, size: gen_qsize.QSizeF): QVariant =

  QVariant.init(fcQVariant_new26(size.h))
proc create2*(T: type QVariant, pt: gen_qpoint.QPoint): QVariant =

  QVariant.init(fcQVariant_new27(pt.h))
proc create2*(T: type QVariant, pt: gen_qpoint.QPointF): QVariant =

  QVariant.init(fcQVariant_new28(pt.h))
proc create2*(T: type QVariant, line: gen_qline.QLine): QVariant =

  QVariant.init(fcQVariant_new29(line.h))
proc create2*(T: type QVariant, line: gen_qline.QLineF): QVariant =

  QVariant.init(fcQVariant_new30(line.h))
proc create2*(T: type QVariant, rect: gen_qrect.QRect): QVariant =

  QVariant.init(fcQVariant_new31(rect.h))
proc create2*(T: type QVariant, rect: gen_qrect.QRectF): QVariant =

  QVariant.init(fcQVariant_new32(rect.h))
proc create2*(T: type QVariant, locale: gen_qlocale.QLocale): QVariant =

  QVariant.init(fcQVariant_new33(locale.h))
proc create2*(T: type QVariant, regExp: gen_qregexp.QRegExp): QVariant =

  QVariant.init(fcQVariant_new34(regExp.h))
proc create2*(T: type QVariant, re: gen_qregularexpression.QRegularExpression): QVariant =

  QVariant.init(fcQVariant_new35(re.h))
proc create2*(T: type QVariant, easing: gen_qeasingcurve.QEasingCurve): QVariant =

  QVariant.init(fcQVariant_new36(easing.h))
proc create2*(T: type QVariant, uuid: gen_quuid.QUuid): QVariant =

  QVariant.init(fcQVariant_new37(uuid.h))
proc create2*(T: type QVariant, url: gen_qurl.QUrl): QVariant =

  QVariant.init(fcQVariant_new38(url.h))
proc create2*(T: type QVariant, jsonValue: gen_qjsonvalue.QJsonValue): QVariant =

  QVariant.init(fcQVariant_new39(jsonValue.h))
proc create2*(T: type QVariant, jsonObject: gen_qjsonobject.QJsonObject): QVariant =

  QVariant.init(fcQVariant_new40(jsonObject.h))
proc create2*(T: type QVariant, jsonArray: gen_qjsonarray.QJsonArray): QVariant =

  QVariant.init(fcQVariant_new41(jsonArray.h))
proc create2*(T: type QVariant, jsonDocument: gen_qjsondocument.QJsonDocument): QVariant =

  QVariant.init(fcQVariant_new42(jsonDocument.h))
proc create2*(T: type QVariant, modelIndex: gen_qabstractitemmodel.QModelIndex): QVariant =

  QVariant.init(fcQVariant_new43(modelIndex.h))
proc create2*(T: type QVariant, modelIndex: gen_qabstractitemmodel.QPersistentModelIndex): QVariant =

  QVariant.init(fcQVariant_new44(modelIndex.h))
proc operatorAssign*(self: QVariant, other: QVariant): void =

  fcQVariant_operatorAssign(self.h, other.h)

proc swap*(self: QVariant, other: QVariant): void =

  fcQVariant_swap(self.h, other.h)

proc typeX*(self: QVariant, ): QVariantType =

  QVariantType(fcQVariant_typeX(self.h))

proc userType*(self: QVariant, ): cint =

  fcQVariant_userType(self.h)

proc typeName*(self: QVariant, ): cstring =

  (fcQVariant_typeName(self.h))

proc canConvert*(self: QVariant, targetTypeId: cint): bool =

  fcQVariant_canConvert(self.h, targetTypeId)

proc convert*(self: QVariant, targetTypeId: cint): bool =

  fcQVariant_convert(self.h, targetTypeId)

proc isValid*(self: QVariant, ): bool =

  fcQVariant_isValid(self.h)

proc isNull*(self: QVariant, ): bool =

  fcQVariant_isNull(self.h)

proc clear*(self: QVariant, ): void =

  fcQVariant_clear(self.h)

proc detach*(self: QVariant, ): void =

  fcQVariant_detach(self.h)

proc isDetached*(self: QVariant, ): bool =

  fcQVariant_isDetached(self.h)

proc toInt*(self: QVariant, ): cint =

  fcQVariant_toInt(self.h)

proc toUInt*(self: QVariant, ): cuint =

  fcQVariant_toUInt(self.h)

proc toLongLong*(self: QVariant, ): clonglong =

  fcQVariant_toLongLong(self.h)

proc toULongLong*(self: QVariant, ): culonglong =

  fcQVariant_toULongLong(self.h)

proc toBool*(self: QVariant, ): bool =

  fcQVariant_toBool(self.h)

proc toDouble*(self: QVariant, ): float64 =

  fcQVariant_toDouble(self.h)

proc toFloat*(self: QVariant, ): float32 =

  fcQVariant_toFloat(self.h)

proc toReal*(self: QVariant, ): float64 =

  fcQVariant_toReal(self.h)

proc toByteArray*(self: QVariant, ): seq[byte] =

  var v_bytearray = fcQVariant_toByteArray(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toBitArray*(self: QVariant, ): gen_qbitarray.QBitArray =

  gen_qbitarray.QBitArray(h: fcQVariant_toBitArray(self.h))

proc toString*(self: QVariant, ): string =

  let v_ms = fcQVariant_toString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringList*(self: QVariant, ): seq[string] =
